# openamrobot-simulation

./: AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  SECURITY.md  package.xml  setup.cfg  setup.py
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
launch/: gz_simulator.launch.py  launch.py
meshes/collision/: bl_wheel_link.STL  fl_wheel_link.STL  right_wheel_link.STL
meshes/visual/: br_wheel_link.STL  fl_caster_link.STL  fr_caster_link.STL  fr_wheel_link.STL  left_wheel_link.STL  lidar_link.STL
openamrobot_description/: README.md  package.xml  setup.cfg  setup.py
openamrobot_description/launch/: launch.py
openamrobot_description/meshes/collision/: br_caster_link.STL
openamrobot_description/urdf/: robo_urdf.urdf.xacro  robot.sdf
openamrobot_gazebo/: README.md  package.xml  setup.cfg  setup.py
openamrobot_gazebo/config/: gz_bridge.yaml
openamrobot_gazebo/launch/: gz_simulator.launch.py
openamrobot_gazebo/worlds/: walled_world.sdf
urdf/: gazebo_control.xacro  robo_urdf.urdf.xacro  robot.sdf
