<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>openamrobot_gazebo</name>
  <version>0.1.0</version>
  <description>Gazebo Harmonic simulation package for OpenAMRobot — world files, ROS–Gazebo bridge config, and simulation launch files.</description>
  <maintainer email="rajindulkar7@gmail.com">Raj Indulkar</maintainer>
  <license>Apache-2.0</license>

  <depend>openamrobot_description</depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
